# elo-time-tracker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aggregator.rs  cli.rs  daemon.rs  hypr.rs  main.rs  report.rs  store.rs
systemd/: elo-time-tracker.service
tests/: integration_hyprctl_mock.rs
