[package]
name = "elo-time-tracker"
version = "0.1.0"
edition = "2021"
authors = ["ghostON3"]
license = "AGPL-3.0"
description = "Rust daemon: per-app focus time tracker via Hyprland IPC → SQLite"
repository = "https://github.com/ghostON3/elo-time-tracker"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = "thin"
codegen-units = 1

[[bin]]
name = "elo-time-tracker"
path = "src/main.rs"
